--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: Hospital Benítez
 description: |
   Bienvenido al Hospital Benítez
-  donde te brindaremos una buena atención 
+  donde te brindaremos una buena atención<br> 
   totalmente gratuita 
 owner: Your Name # or company name
 first_published: 2016 # if migrating another site, the year of your first publish
