--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: |
   Bienvenido al Hospital Benítez
   donde te brindaremos una buena atención<br> 
   totalmente gratuita 
-owner: Your Name # or company name
+owner: Delgado Benítez Carlos Alberto # or company name
 first_published: 2016 # if migrating another site, the year of your first publish
 email: your-email@domain.com
 baseurl: "" # the subpath of your site, e.g. /blog
