--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@ email: your-email@domain.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/<username>
-  github: https://github.com/<username>
-  linkedin-square: https://linkedin.com/in/<username>
-  facebook-official: https://facebook.com/<username>
-  google-plus-square: https://plus.google.com/u/0/+<username>
-  #email: /contact/
+  twitter: https://twitter.com/<Carlos_DB24>
+  github: 
+  linkedin-square: 
+  facebook-official: https://facebook.com/<carlos.delgadobenitez.9>
+  google-plus-square: 
+  #email: /delgadobenitezcarlosd@gmail.com/
   #flickr:
-  #instagram:
+  #instagram: https://instagram.com/<_xcaldb24x_/>
   #youtube-square:
   #spotify:
   #stack-overflow:
