--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ social:
   #linkedin-square: 
   facebook-official: https://facebook.com/carlos.delgadobenitez.9
   #google-plus-square: 
-  email: /delgadobenitezcarlosd@gmail.com/
+  email: delgadobenitezcarlosd@gmail.com
   #flickr:
   instagram: https://instagram.com/_xcaldb24x_/
   #youtube-square:
