--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #
 
 # Site settings
-title: Hospittal García
+title: Hospital García
 description: |
   Bienvenido al Hospital García
   Donde nos encargamos de brindarte la mejor atencion para tu salud y bienestar<br>
