--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ social:
   twitter:
   #github: 
   #linkedin-square: 
-  facebook-official: https://facebook.com/carlos.delgadobenitez.9
+  facebook-official: https://www.facebook.com/ailton.ga.54
   #google-plus-square: 
   email: ailtongama238@gmail.com
   #flickr:
-  instagram: 
+  instagram: https://instagram.com/ailtongama238?igshid=YmMyMTA2M2Y= 
   #youtube-square:
   #spotify:
   #stack-overflow:
