--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 title: SAU
 description: |
   Bienvenido al Sistema de Ayuda Universitaria (SAU)
-  Donde nos encargamos de escuchar las problematicas de los estudiantes y darles seguimiento para llegar a una solucion<br>
-  Todo estuddiante debe alzarla voz no estas sola/o
+  Donde nos encargamos de resolver los problemas de la comunidad estudiantil dando un proceso a cada caso presentado sin omitir alguno <br>
+  Todo estudiante debe alzar la voz no estas sola/o
 owner: Sistema de Ayuda Universitaria # or company name
 first_published: 2023 # if migrating another site, the year of your first publish
 email: your-email@domain.com
