--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ social:
   twitter:
   #github: 
   #linkedin-square: 
-  facebook-official: https://www.facebook.com/ailton.ga.54
+  facebook-official: https://www.facebook.com/CU.UAEMNEZA.OFICIAL?mibextid=ZbWKwL
   #google-plus-square: 
-  email: ailtongama238@gmail.com
+  email: sau_ayuda@uaemex.mx
   #flickr:
-  instagram: https://instagram.com/ailtongama238?igshid=YmMyMTA2M2Y= 
+  instagram: https://instagram.com/cu.uaem.neza?igshid=MTNiYzNiMzkwZA==
   #youtube-square:
   #spotify:
   #stack-overflow:
